Fix form buttons alignment conflicts with addEPI Modal

--- a/apihub-root/dsu-fabric/web-components/modals/add-epi-modal/add-epi-modal.css
+++ b/apihub-root/dsu-fabric/web-components/modals/add-epi-modal/add-epi-modal.css
@@ -79,10 +79,6 @@ add-epi-modal{
     justify-content: end;
 }
 
-.default-button{
-    font-size: 110%;
-    margin: 0;
-}
 .margin-right{
     margin-right: 16px;
 }
@@ -129,4 +125,7 @@ add-epi-modal{
 }
 .file-name{
     margin-left: 10px
+}
+.default-button .no-margin{
+    margin:0;
 }
